--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -468,6 +468,14 @@ display: block;
   margin-left: 3.5em!important;
 }
 
+.btn--primary2--res2{
+  font-size: 16px;
+  border-radius: 4px!important;
+  padding: 5px 8px!important;
+  width: 20%!important;
+  margin-left: 0em!important;
+}
+
 .btn--primary2--res--small{
   font-size: 14px;
   border-radius: 4px!important;
