--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,11 +1,12 @@
 <div class="card" style="max-width: 80rem; min-height: 30rem">
     <h5 class="card-header card--header--title">All Assignments 
+        <%= link_to 'Back', courses_path, class:"btn btn--primary2--header--button" %>
         <% if current_user.administrator == true || current_user.teacher == true %>
-            <%= link_to 'Back', courses_path, class:"btn btn--primary2--header--button" %>
             <%= link_to 'New Assignment', assignment_creation_path(), class:"btn btn--primary2--header--button"  %>
         <% end %>
     </h5>
     <div class="card-body">
+        <h5>Essays</h5>
         <div class="table-responsive">
             <table class="table">
                 <thead class="table">
@@ -17,21 +18,75 @@
                 </thead>
 
                 <tbody>
-                    <%@assignments.each do |assig| %>
-                    <tr>
-                        <td><%= assig.name %></td>
-                        <td><%= assig.deadline %></td>
-                        <% if EssaySolution.find_by_essay_id_and_student_id(assig.id, current_user.id).submit_time != nil %>
-                            <td>Submitted</td>
-                        <% elsif Time.parse(@current_date.to_s) > Time.parse(assig.deadline.to_s) %>
-                            <td><b>Overdue</b></td>
-                        <% else %>
-                            <td></td>
-                        <% end %>
-                    </tr>
+                    <%@essays.each do |essay| %>
+                        <tr>
+                            <% if current_user.administrator == true || current_user.teacher == true %>
+                                <% @current_essay = essay %>
+                                <td><%= link_to essay.name, index_for_essay_path(@current_essay) %></td>
+                                <td><%= essay.deadline %></td>
+                                <% if Time.parse(@current_date.to_s) > Time.parse(essay.deadline.to_s) %>
+                                    <td><b>Overdue</b></td>
+                                <% else %>
+                                    <td></td>
+                                <% end %>
+                            <% else %>
+                                <% @essay_solution = EssaySolution.find_by_essay_id_and_student_id(essay.id, current_user.id) %>
+                                <td><%= link_to essay.name, edit_essay_solution_path(@essay_solution) %></td>
+                                <td><%= essay.deadline %></td>
+                                <% if @essay_solution.submit_time != nil %>
+                                    <td>Submitted</td>
+                                <% elsif Time.parse(@current_date.to_s) > Time.parse(essay.deadline.to_s) %>
+                                    <td><b>Overdue</b></td>
+                                <% else %>
+                                    <td></td>
+                                <% end %>
+                            <% end %>
+                        </tr>
                     <% end %>
                 </tbody>
             </table>
         </div>
+
+        <!--
+        <h5>Quizes</h5>
+        <div class="table-responsive">
+            <table class="table">
+                <thead class="table">
+                    <tr>
+                        <th>Name</th>
+                        <th>Due Date</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <%# @quizes.each do |quiz| %>
+                        <tr>
+                            <%# if current_user.administrator == true || current_user.teacher == true %>
+                                <td><%#= link_to quiz.name, essay_solutions_path() %></td>
+                                <td><%#= quiz.deadline %></td>
+                                <%# if Time.parse(@current_date.to_s) > Time.parse(quiz.deadline.to_s) %>
+                                    <td><b>Overdue</b></td>
+                                <%# else %>
+                                    <td></td>
+                                <%# end %>
+                            <%# else %>
+                                <td><%#= link_to quiz.name, edit_essay_solution_path(@essay_solution) %></td>
+                                <td><%#= quiz.deadline %></td>
+                                <%# if @essay_solution.submit_time != nil %>
+                                    <td>Submitted</td>
+                                <%# elsif Time.parse(@current_date.to_s) > Time.parse(quiz.deadline.to_s) %>
+                                    <td><b>Overdue</b></td>
+                                <%# else %>
+                                    <td></td>
+                                <%# end %>
+                            <%# end %>
+                        </tr>
+                    <%# end %>
+                </tbody>
+            </table>
+        </div>
+
+        -->
     </div>
 </div>
