--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -15,7 +15,6 @@
 				</div>
 					
           <%= nested_form_for([resource_name, resource.with_school], url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  
               <div class="row form-group form__input">
                 <b><%= f.label :first_name %></b><br />
                 <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", value: @current_user.first_name %>
@@ -56,7 +55,7 @@
               <% end %>
 
               <div class="actions">
-                <%= link_to "Update Profile", users_registrations_save_updates_path(), class: "btn btn-primary {color: #008080}" %>
+                <%= f.submit "Update Profile", class: "btn btn-primary {color: #008080}" %>
               </div>
           <% end %>
 
