--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -502,6 +502,16 @@ display: block;
   margin-bottom: 0em!important;
 }
 
+.btn--primary2--table--del{
+  font-size: 15px;
+  border-radius: 4px!important;
+  padding: 5px 5px!important;
+  width: 120px!important;
+  position: relative;
+  margin-top: 0em!important;
+  margin-bottom: 0em!important;
+}
+
 .btn--primary2--header--button{
   font-size: 15px;
   border-radius: 4px!important;
