--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -14,6 +14,7 @@
                         <th>Name</th>
                         <th>Due Date</th>
                         <th>Status</th>
+                        <th>Grade</th>
                     </tr>
                 </thead>
 
@@ -29,6 +30,7 @@
                                 <% else %>
                                     <td></td>
                                 <% end %>
+                                <td></td>
                             <% else %>
                                 <% @essay_solution = EssaySolution.find_by_essay_id_and_student_id(essay.id, current_user.id) %>
                                 <td><%= link_to essay.name, edit_essay_solution_path(@essay_solution) %></td>
@@ -40,6 +42,7 @@
                                 <% else %>
                                     <td></td>
                                 <% end %>
+                                <td></td>
                             <% end %>
                         </tr>
                     <% end %>
@@ -71,6 +74,7 @@
                                 <% else %>
                                     <td></td>
                                 <% end %>
+                                <td><%= QuizSolution.find_by_student_id_and_quize_id(current_user.id, quiz.id).grade %></td>
                             <% else %>
                                 <td><%= link_to quiz.name, quiz %></td>
                                 <td><%= quiz.deadline %></td>
@@ -81,6 +85,7 @@
                                 <% else %>
                                     <td></td>
                                 <% end %>
+                                <td><%= QuizSolution.find_by_student_id_and_quize_id(current_user.id, quiz.id).grade %></td>
                             <% end %>
                         </tr>
                     <% end %>
