--- a/app/views/quiz_answers/new.html.erb
+++ b/app/views/quiz_answers/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Quiz Answer</h1>
-
-<%= render 'form', quiz_answer: @quiz_answer %>
-
-<%= link_to 'Back', quiz_answers_path %>
+<div class="card" style="max-width: 80rem; min-height: 30rem">
+    <h5 class="card-header card--header--title">
+        New Answer
+        <%= link_to 'Back', QuizQuestion.find(session[:quiz_question_id]), class:"btn btn--primary2--header--button"  %>
+    </h5>
+    <div class="card-body">
+        <%= render 'form', quiz_answer: @quiz_answer %>
+    </div>
+</div>
