--- a/app/views/quiz_questions/_form.html.erb
+++ b/app/views/quiz_questions/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:"btn btn--primary2--res" %>
   </div>
 <% end %>
