--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <div class="card" style="max-width: 80rem; min-height: 30rem">
-    <h5 class="card-header card--header--title">All Courses <%= link_to 'New Course', new_course_path, class:"btn btn--primary2--header--button"  %></h5>
+    <h5 class="card-header card--header--title">All Courses 
+      <% if current_user.administrator == true || current_user.teacher == true %>
+        <%= link_to 'New Course', new_course_path, class:"btn btn--primary2--header--button"  %>
+      <% end %>
+    </h5>
     <div class="card-body">
         <div class="row row-cols-1 row-cols-md-4 g-4">
           <% @schools_courses.each do |course| %>
