--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -42,7 +42,7 @@
                                 <% else %>
                                     <td></td>
                                 <% end %>
-                                <td></td>
+                                <td><%= @essay_solution.grade %></td>
                             <% end %>
                         </tr>
                     <% end %>
