--- a/app/views/essay_solutions/_form.html.erb
+++ b/app/views/essay_solutions/_form.html.erb
@@ -14,30 +14,58 @@
   <h5>You can add <b>attachments</b> or you can provide your answer directly in the <b>text-box</b>.</h5>
   <p><b><u>Note:</u></b> The newly added attachments <i>overwrite</i> the existing ones.</p>
 
-  <% if Time.parse(@current_date.to_s) < Time.parse(Essay.find(essay_solution.essay_id).deadline.to_s) %>
-    <div id="my_form">
-      <button class="btn btn--primary2--res2" type="button" onclick="files(event)">Upload Attachments</button>
-      <br  />
-      <p><strong></strong>
-        <div class="tab">
-          <% @attachments.each do |att| %>
-            <li>
-              <%= link_to '', :onclick => "get_metadata('#{att}')" do %>
-                File
-                <%#= data.filename %><br  />
-              <% end %>
-            </li>
-          <% end %>
-        </div>
-      </p>
-      <%= form.hidden_field :attachments, id:"hidden_input_files" %>
-    </div>
+  <% if current_user.student == true %>
+    <% if Time.parse(@current_date.to_s) < Time.parse(Essay.find(essay_solution.essay_id).deadline.to_s) %>
+      <div id="my_form">
+        <button class="btn btn--primary2--res2" type="button" onclick="files(event)">Upload Attachments</button>
+        <br  />
+        <p><strong></strong>
+          <div class="tab">
+            <% @attachments.each do |att| %>
+              <li>
+                <%= link_to '', :onclick => "get_metadata('#{att}')" do %>
+                  File
+                  <%#= data.filename %><br  />
+                <% end %>
+              </li>
+            <% end %>
+          </div>
+        </p>
+        <%= form.hidden_field :attachments, id:"hidden_input_files" %>
+      </div>
 
-    <div class="field">
-      <%= form.text_area :content, cols:100, rows:20 %>
+      <div class="field">
+        <%= form.text_area :content, cols:100, rows:20 %>
+      </div>
+    <% else %>
+      <p>This assignment is overdue. You cannot edit your submission.</p>
+      <div id="my_form">
+        <button class="btn btn--primary2--res2" type="button" onclick="files(event)" disabled = true >Upload Attachments</button>
+        <br  />
+        <p><strong></strong>
+          <div class="tab">
+            <% @attachments.each do |att| %>
+              <li>
+                <%= link_to '', :onclick => "get_metadata('#{att}')" do %>
+                  File
+                  <%#= data.filename %><br  />
+                <% end %>
+              </li>
+            <% end %>
+          </div>
+        </p>
+        <%= form.hidden_field :attachments, id:"hidden_input_files" %>
+      </div>
+
+      <div class="field">
+        <%= form.text_area :content, cols:100, rows:20, readonly: true %>
+      </div>
+    <% end %>
+
+    <div class="actions">
+      <%= form.submit "Save", class:"btn btn--primary2--res--right" %>
     </div>
   <% else %>
-    <p>This assignment is overdue. You cannot edit your submission.</p>
     <div id="my_form">
       <button class="btn btn--primary2--res2" type="button" onclick="files(event)" disabled = true >Upload Attachments</button>
       <br  />
@@ -58,12 +86,23 @@
 
     <div class="field">
       <%= form.text_area :content, cols:100, rows:20, readonly: true %>
+      <br />
+    </div>
+
+    <div>
+      <br />
+      <br />
+    </div>
+
+    <div class="field">
+    <b><%= form.label "Grade: "%></b>
+      <%= form.text_area :grade %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit "Save grade", class:"btn btn--primary2--res--right" %>
     </div>
   <% end %>
-
-  <div class="actions">
-    <%= form.submit "Save", class:"btn btn--primary2--res--right" %>
-  </div>
 <% end %>
 
 <script>
