quiz question with free  answer

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -547,6 +547,10 @@ display: block;
   width: 15%;
 }
 
+.form--select--type{
+  width: 25%;
+}
+
 .col--padding{
   padding-right: 400;
   padding-left: 80px;
