--- a/app/views/quiz_solutions/index_for_quiz.html.erb
+++ b/app/views/quiz_solutions/index_for_quiz.html.erb
@@ -10,7 +10,7 @@
           <thead class="table">
             <tr>
               <th>Student</th>
-              <!--<th>Solution</th>-->
+              <th>Solution</th>
               <th>Grade</th>
               <th colspan="3"></th>
             </tr>
@@ -19,9 +19,9 @@
           <tbody>
             <% @quiz_solutions_for_quiz.each do |quiz_solution| %>
               <tr>
-                <% user = User.find(quiz_solution.student_id) %>
-                <td><%= user.first_name  + " " + user.last_name %></td>
-                <!--<td><%#= link_to 'See', quiz_solution %></td>-->
+                <% @user = User.find(quiz_solution.student_id) %>
+                <td><%= @user.first_name  + " " + @user.last_name %></td>
+                <td><%= link_to 'See', users_solution_path(@user) %></td>
                 <td><%= quiz_solution.grade %></td>
               </tr>
             <% end %>
